syntax = "proto3";

option csharp_namespace = "HydroMeasure.Api.Protos"; // Ajuste o namespace conforme necessário

package CondominioService;

// Importando o OperationResult (assumindo que esteja definido em outro proto ou aqui mesmo)
// Se OperationResult estiver em outro proto, descomente a linha abaixo e ajuste o path
// import "shared/operation_result.proto";

message CondominioGrpcDto {
  string id = 1; // Guid como string
  string nome = 2;
  string endereco = 3;
  string cnpj = 4;
  string sindico = 5;
  string telefoneSindico = 6;
  string emailSindico = 7;
  bool ativo = 8;
}

message OperationResultGrpcCondominioDto {
  bool success = 1;
  string message = 2;
  CondominioGrpcDto data = 3;
  string errorCode = 4;
  repeated string errors = 5;
}

message OperationResultGrpcBool {
  bool success = 1;
  string message = 2;
  bool data = 3;
  string errorCode = 4;
  repeated string errors = 5;
}

message CreateCondominioRequest {
  string nome = 1;
  string endereco = 2;
  string cnpj = 3;
  string sindico = 4;
  string telefoneSindico = 5;
  string emailSindico = 6;
}

message CreateCondominioResponse {
  OperationResultGrpcCondominioDto result = 1;
}

message UpdateCondominioRequest {
  string id = 1; // Guid como string
  string nome = 2;
  string endereco = 3;
  string cnpj = 4;
  string sindico = 5;
  string telefoneSindico = 6;
  string emailSindico = 7;
  bool ativo = 8;
}

message UpdateCondominioResponse {
  OperationResultGrpcCondominioDto result = 1;
}

message GetCondominioByIdRequest {
  string id = 1; // Guid como string
}

message GetCondominioByIdResponse {
  CondominioGrpcDto condominio = 1; // Pode ser nulo, verificar no serviço
}

message GetAllCondominiosRequest {
  // Sem parâmetros por enquanto, pode adicionar paginação/filtros no futuro
}

message GetAllCondominiosResponse {
  repeated CondominioGrpcDto condominios = 1;
}

message DeleteCondominioRequest {
  string id = 1; // Guid como string
}

message DeleteCondominioResponse {
  OperationResultGrpcBool result = 1;
}


service CondominioGrpcService {
  rpc CreateCondominio (CreateCondominioRequest) returns (CreateCondominioResponse);
  rpc UpdateCondominio (UpdateCondominioRequest) returns (UpdateCondominioResponse);
  rpc GetCondominioById (GetCondominioByIdRequest) returns (GetCondominioByIdResponse);
  rpc GetAllCondominios (GetAllCondominiosRequest) returns (GetAllCondominiosResponse);
  rpc DeleteCondominio (DeleteCondominioRequest) returns (DeleteCondominioResponse);
}